--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.5.3",
     "core-js": "^3.6.4",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "view-design": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
