--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^1.5.3",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "view-design": "^4.2.0",
